# localcv

./: .gitignore  Cargo.toml  README.md  build.rs  metrics.sh  run.sh
.github/workflows/: rust.yml
libdepth/: CMakeLists.txt  ModelManager.mm  depth.c  depth.mm  exp  exp.mm  preprocessing.cpp
outputs/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
preloadmodelling/: ModelManager.h  ModelManager.mm  inferencing.mm
pythonmodelfiles/: coremlInference.py
scripts/: coremlInference.py  main.py  multi_sender.sh  sender.py  single_sender.sh  single_stream.sh
src/: lib.rs  main.rs  render.rs
